--- a/about/index.html
+++ b/about/index.html
@@ -533,7 +533,7 @@
   <!--back to top-->
 </body>
 <!--footer-->
-<footer class="Grey100Bg">
+<footer class="GreyBg100">
   <div class="">
     <div class="footer">
       <h4 class="footer-left element"> &#169; 2023 &#8212; VICKY WANG</h4>
