--- a/appointment_maker/index.html
+++ b/appointment_maker/index.html
@@ -152,7 +152,7 @@
 
   <!--about appointmentmaker-->
 
-  <div class="Grey200Bg">
+  <div class="GreyBg200">
     <div class="blankHL"></div>
     <div class="column centerVer">
 
@@ -1902,7 +1902,7 @@
   <!--step progress bar-->
 
 
-  <div class="Grey200Bg">
+  <div class="GreyBg200">
   </div>
 
   <div class="blankHS"></div>
@@ -1929,7 +1929,7 @@
 <!--back to top-->
 
 <!--footer-->
-<div class="Grey200Bg">
+<div class="GreyBg200">
 
   <div class="footer">
     <p class="footer-left"> &#169; 2021 &#8212; VICKY WANG
