--- a/design_system/index.html
+++ b/design_system/index.html
@@ -190,7 +190,7 @@
   <!-- header -->
 
   <!-- header image -->
-  <div class="Grey200Bg">
+  <div class="GreyBg200">
     <div class="blankPhone"></div>
     <div class="blankHS"></div>
     <div class="ProjectBanner displayLaptop">
@@ -419,7 +419,7 @@
             <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS Grey900Bg Grey200 shadowBox">
+                  <div class="blockS GreyBg900 Grey200 shadowBox">
                     <div>Grey 900</div>
                     <div>HEX:1b1b1b</div>
                   </div>
@@ -427,7 +427,7 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS Grey800Bg Grey200 shadowBox">
+                  <div class="blockS GreyBg800 Grey200 shadowBox">
                     <div>Grey 800</div>
                     <div>HEX:505050</div>
                   </div>
@@ -435,7 +435,7 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS Grey700Bg Grey200 shadowBox">
+                  <div class="blockS GreyBg700 Grey200 shadowBox">
                     <div>Grey 700</div>
                     <div>HEX:707070</div>
                   </div>
@@ -443,7 +443,7 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS Grey600Bg Grey200 shadowBox">
+                  <div class="blockS GreyBg600 Grey200 shadowBox">
                     <div>Grey 600</div>
                     <div>HEX:a5a5a5</div>
                   </div>
@@ -452,7 +452,7 @@
 
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS Grey500Bg shadowBox">
+                  <div class="blockS GreyBg500 shadowBox">
                     <div>Grey 500</div>
                     <div>HEX:b6b5b5</div>
                   </div>
@@ -460,7 +460,7 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS Grey400Bg shadowBox">
+                  <div class="blockS GreyBg400 shadowBox">
                     <div>Grey 400</div>
                     <div>HEX:e6e6e6</div>
                   </div>
@@ -470,7 +470,7 @@
             <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS Grey300Bg shadowBox">
+                  <div class="blockS GreyBg300 shadowBox">
                     <div>Grey 300</div>
                     <div>HEX:efefef</div>
                   </div>
@@ -478,7 +478,7 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS Grey200Bg shadowBox">
+                  <div class="blockS GreyBg200 shadowBox">
                     <div>Grey 200</div>
                     <div>HEX:f2f2f2</div>
                   </div>
@@ -486,7 +486,7 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS Grey100Bg shadowBox">
+                  <div class="blockS GreyBg100 shadowBox">
                     <div>Grey 100</div>
                     <div>HEX:F8F8F8</div>
                   </div>
@@ -494,17 +494,17 @@
               </div>
               <div class="Grid-cell">
                 <div class="element displayNone">
-                  <div class="blockS Grey200Bg shadowBox">Grey 200 HEX:f8f8f8</div>
+                  <div class="blockS GreyBg200 shadowBox">Grey 200 HEX:f8f8f8</div>
                 </div>
               </div>
               <div class="Grid-cell">
                 <div class="element displayNone">
-                  <div class="blockS Grey200Bg shadowBox">Grey 200 HEX:f2f2f2</div>
+                  <div class="blockS GreyBg200 shadowBox">Grey 200 HEX:f2f2f2</div>
                 </div>
               </div>
               <div class="Grid-cell">
                 <div class="element displayNone">
-                  <div class="blockS Grey200Bg shadowBox">Grey 200 HEX:f8f8f8</div>
+                  <div class="blockS GreyBg200 shadowBox">Grey 200 HEX:f8f8f8</div>
                 </div>
               </div>
             </div>
@@ -576,34 +576,34 @@
             <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS Grey200Bg shadowFilter">Small Shadow</div>
+                  <div class="blockS GreyBg200 shadowFilter">Small Shadow</div>
                 </div>
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS Grey200Bg shadowBox">Normal Shadow</div>
+                  <div class="blockS GreyBg200 shadowBox">Normal Shadow</div>
                 </div>
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS Grey200Bg shadowFilterL">Larger Shadow</div>
+                  <div class="blockS GreyBg200 shadowFilterL">Larger Shadow</div>
                 </div>
               </div>
             </div>
             <div class="Grid Grid--gutters Grid--cols-3 u-textCenter">
               <div class="Grid-cell">
                 <div class="element displayNone">
-                  <div class="blockS Grey200Bg shadowFilter">Small Shadow</div>
+                  <div class="blockS GreyBg200 shadowFilter">Small Shadow</div>
                 </div>
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS Grey200Bg shadowBoxLt">Normal Shadow - light</div>
+                  <div class="blockS GreyBg200 shadowBoxLt">Normal Shadow - light</div>
                 </div>
               </div>
               <div class="Grid-cell">
                 <div class="element displayNone">
-                  <div class="blockS Grey200Bg shadowFilterL">Larger Shadow</div>
+                  <div class="blockS GreyBg200 shadowFilterL">Larger Shadow</div>
                 </div>
               </div>
             </div>
@@ -1123,7 +1123,7 @@
 
               <div class="Grid Grid--full wrapper">
                 <div class="Grid-cell">
-                  <div class="element leftVerLine border-radius colorBgGrey100">
+                  <div class="element leftVerLine border-radius GreyBg100">
                     <h4>
                       <p> <strong>Title </strong></p>
                       <ul>
@@ -1666,7 +1666,7 @@
   <!--back to top-->
 </body>
 <!--footer-->
-<footer class="Grey100Bg">
+<footer class="GreyBg100">
   <div>
     <div class="footer">
       <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
