--- a/design_system1/index.html
+++ b/design_system1/index.html
@@ -211,7 +211,7 @@
   <!-- header -->
 
   <!-- header image -->
-  <div class="Grey200Bg">
+  <div class="GreyBg200">
     <div class="blankPhone"></div>
     <div class="blankHS"></div>
     <div class="ProjectBanner displayLaptop">
@@ -333,8 +333,7 @@
     <div class="blankHS"></div>
     <div class="Grid Grid--full u-textCenter">
       <div class="Grid-cell">
-        <h1 class="Grid Grid--center"> <span class="specialTextL">Design System</span><img class="moveUpDown widthLogo"
-            src="../icon/arrow-accordion-down.svg" alt="Scroll down">
+        <h1 class="Grid Grid--center"> <span class="specialTextL Grey500">Design System</span>
         </h1>
       </div>
     </div>
@@ -401,7 +400,7 @@
           <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
             <div class="Grid-cell">
               <div class="element">
-                <div class="blockS Grey900Bg Grey200 shadowBox">
+                <div class="blockS GreyBg900 Grey200 shadowBox">
                   <div>Grey 900</div>
                   <div>HEX:1b1b1b</div>
                 </div>
@@ -409,7 +408,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="blockS Grey800Bg Grey200 shadowBox">
+                <div class="blockS GreyBg800 Grey200 shadowBox">
                   <div>Grey 800</div>
                   <div>HEX:505050</div>
                 </div>
@@ -417,7 +416,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="blockS Grey700Bg Grey200 shadowBox">
+                <div class="blockS GreyBg700 Grey200 shadowBox">
                   <div>Grey 700</div>
                   <div>HEX:707070</div>
                 </div>
@@ -425,7 +424,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="blockS Grey600Bg Grey200 shadowBox">
+                <div class="blockS GreyBg600 Grey200 shadowBox">
                   <div>Grey 600</div>
                   <div>HEX:a5a5a5</div>
                 </div>
@@ -434,7 +433,7 @@
 
             <div class="Grid-cell">
               <div class="element">
-                <div class="blockS Grey500Bg shadowBox">
+                <div class="blockS GreyBg500 shadowBox">
                   <div>Grey 500</div>
                   <div>HEX:b6b5b5</div>
                 </div>
@@ -442,7 +441,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="blockS Grey400Bg shadowBox">
+                <div class="blockS GreyBg400 shadowBox">
                   <div>Grey 400</div>
                   <div>HEX:e6e6e6</div>
                 </div>
@@ -452,7 +451,7 @@
           <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
             <div class="Grid-cell">
               <div class="element">
-                <div class="blockS Grey300Bg shadowBox">
+                <div class="blockS GreyBg300 shadowBox">
                   <div>Grey 300</div>
                   <div>HEX:efefef</div>
                 </div>
@@ -460,7 +459,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="blockS Grey200Bg shadowBox">
+                <div class="blockS GreyBg200 shadowBox">
                   <div>Grey 200</div>
                   <div>HEX:f2f2f2</div>
                 </div>
@@ -468,7 +467,7 @@
             </div>
             <div class="Grid-cell">
               <div class="element">
-                <div class="blockS Grey100Bg shadowBox">
+                <div class="blockS GreyBg100 shadowBox">
                   <div>Grey 100</div>
                   <div>HEX:F8F8F8</div>
                 </div>
@@ -476,17 +475,17 @@
             </div>
             <div class="Grid-cell">
               <div class="element displayNone">
-                <div class="blockS Grey200Bg shadowBox">Grey 200 HEX:f8f8f8</div>
+                <div class="blockS GreyBg200 shadowBox">Grey 200 HEX:f8f8f8</div>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element displayNone">
-                <div class="blockS Grey200Bg shadowBox">Grey 200 HEX:f2f2f2</div>
+                <div class="blockS GreyBg200 shadowBox">Grey 200 HEX:f2f2f2</div>
               </div>
             </div>
             <div class="Grid-cell">
               <div class="element displayNone">
-                <div class="blockS Grey200Bg shadowBox">Grey 200 HEX:f8f8f8</div>
+                <div class="blockS GreyBg200 shadowBox">Grey 200 HEX:f8f8f8</div>
               </div>
             </div>
           </div>
@@ -1104,7 +1103,7 @@
         <div class="blankHS"></div>
 
       </section>
-      <section id="content12" class="colorBgGrey100">
+      <section id="content12" class="GreyBg100">
         <div class="wrapper">
           <!-- Arrow -->
           <div class="Grid Grid--full">
@@ -1599,7 +1598,7 @@
 
         </div>
       </section>
-      <section id="content14" class="colorBgGrey100">
+      <section id="content14" class="GreyBg100">
         <div class="blankHXS"></div>
 
         <div class="wrapper">
@@ -1837,7 +1836,7 @@
 
         </div>
       </section>
-      <section id="content22" class="colorBgGrey100">
+      <section id="content22" class="GreyBg100">
 
         <div class="blankHXS"></div>
 
@@ -2237,7 +2236,7 @@
 
       </section>
       <div class="blankHS"></div>
-      <section id="content24" class="colorBgGrey100">
+      <section id="content24" class="GreyBg100">
         <div class="blankHXS"></div>
 
         <div class="wrapper">
@@ -2765,7 +2764,7 @@
 
         </div>
       </section>
-      <section id="content32" class="colorBgGrey100">
+      <section id="content32" class="GreyBg100">
         <div class="blankHXS"></div>
         <div class="wrapper">
           <!-- Arrow -->
@@ -3256,7 +3255,7 @@
 
 
       </section>
-      <section id="content34" class="colorBgGrey100">
+      <section id="content34" class="GreyBg100">
         <div class="blankHXS"></div>
         <div class="wrapper">
           <!-- Arrow -->
@@ -4259,7 +4258,7 @@
   </button>
   <!--back to top-->
   <!--footer-->
-  <footer class="Grey100Bg">
+  <footer class="GreyBg100">
     <div class="element">
       <div class="footer">
         <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
