--- a/gardeners_hub/index.html
+++ b/gardeners_hub/index.html
@@ -126,7 +126,7 @@
 
 
   <!--about gardenershub-->
-  <div class="Grey200Bg" id="bg-color-trigger">
+  <div class="GreyBg200" id="bg-color-trigger">
     <div class="blankProject"></div>
     <div class="rowChng centerHorz centerVer alignCPH">
       <img src="../../image/layout_GardenersHub.png" alt="Gardeners Hub" class="widthXL">
@@ -2951,7 +2951,7 @@
 <!--back to top-->
 
 <!--footer-->
-<div class="Grey200Bg">
+<div class="GreyBg200">
 
   <div class="footer">
     <p class="footer-left"> &#169; 2021 &#8212; VICKY WANG
