--- a/glorify/index.html
+++ b/glorify/index.html
@@ -1089,7 +1089,7 @@
         <div class="blankHS"></div>
 
       </section>
-      <section id="content12" class="colorBgGrey100">
+      <section id="content12" class="GreyBg100">
         <div class="wrapper">
           <!-- Arrow -->
           <div class="Grid Grid--full">
@@ -1573,7 +1573,7 @@
 
         </div>
       </section>
-      <section id="content14" class="colorBgGrey100">
+      <section id="content14" class="GreyBg100">
         <div class="blankHXS"></div>
 
         <div class="wrapper">
@@ -1811,7 +1811,7 @@
 
         </div>
       </section>
-      <section id="content22" class="colorBgGrey100">
+      <section id="content22" class="GreyBg100">
 
         <div class="blankHXS"></div>
 
@@ -2211,7 +2211,7 @@
 
       </section>
       <div class="blankHS"></div>
-      <section id="content24" class="colorBgGrey100">
+      <section id="content24" class="GreyBg100">
         <div class="blankHXS"></div>
 
         <div class="wrapper">
@@ -2739,7 +2739,7 @@
 
         </div>
       </section>
-      <section id="content32" class="colorBgGrey100">
+      <section id="content32" class="GreyBg100">
         <div class="blankHXS"></div>
         <div class="wrapper">
           <!-- Arrow -->
@@ -3230,7 +3230,7 @@
 
 
       </section>
-      <section id="content34" class="colorBgGrey100">
+      <section id="content34" class="GreyBg100">
         <div class="blankHXS"></div>
         <div class="wrapper">
           <!-- Arrow -->
@@ -4233,7 +4233,7 @@
   </button>
   <!--back to top-->
   <!--footer-->
-  <footer class="Grey100Bg">
+  <footer class="GreyBg100">
     <div class="element">
       <div class="footer">
         <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
