--- a/meal_planner/index.html
+++ b/meal_planner/index.html
@@ -190,7 +190,7 @@
 
   </div>
   <!--about mealplanner-->
-  <div class="Grey200Bg">
+  <div class="GreyBg200">
 
     <div class="blankHM"></div>
     <hr>
@@ -682,7 +682,7 @@
   </div>
 
   <!-- STRATEGY -->
-  <div class="Grey200Bg">
+  <div class="GreyBg200">
     <div class="blankHL"></div>
 
 
@@ -1103,7 +1103,7 @@
     <br>
   </div>
   <!-- 02 -->
-  <div class=" Grey200Bg">
+  <div class=" GreyBg200">
     <div class="blankHS"></div>
 
     <div class="column wrapper ">
@@ -1838,7 +1838,7 @@
   </div>
   <div class="blankHM"></div>
 
-  <div class="Grey200Bg">
+  <div class="GreyBg200">
     <div class="blankHS"></div>
 
     <div class="carousel">
@@ -1988,7 +1988,7 @@
 
 </body>
 <!--footer-->
-<footer class="Grey100Bg">
+<footer class="GreyBg100">
   <div class="">
     <div class="footer">
       <h5 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h5>
