--- a/navigation/V1/index.html
+++ b/navigation/V1/index.html
@@ -208,7 +208,7 @@
     </div>
   </nav>
   <!-- header -->
-  <div class="Grey200Bg">
+  <div class="GreyBg200">
     <div class="blankPhone"></div>
     <div class="blankHS"></div>
     <div class="ProjectBanner displayLaptop">
@@ -352,7 +352,7 @@
     </nav>
 
     <div>
-      <section id="content1" class="colorBgGrey">
+      <section id="content1" class="GreyBg200">
         <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
           <div class="Grid-cell">
             <h1 class="Grid Grid--center"> <span>Content 1</span><img class="moveUpDown widthLogo"
@@ -686,7 +686,7 @@
 
         </section>
 
-        <div class="colorBgGrey">
+        <div class="GreyBg200">
 
 
 
@@ -964,7 +964,7 @@
       </section>
       <div class="blankHS"></div>
       <section id="content4">
-        <div class="colorBgGrey">
+        <div class="GreyBg200">
           <div class="blankHS"></div>
 
           <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
@@ -1108,7 +1108,7 @@
           <div class="Grid Grid--full wrapper">
             <div class="Grid-cell">
               <div class="element">
-                <div class="element Grey100Bg leftVerLine ">
+                <div class="element GreyBg100 leftVerLine ">
                   <h4>
                     <p> <strong>Title </strong></p>
                     <ul>
@@ -1190,7 +1190,7 @@
 
 
   <!--footer-->
-  <footer class="Grey100Bg">
+  <footer class="GreyBg100">
     <div class="element">
       <div class="footer">
         <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
