--- a/navigation/V2/index.html
+++ b/navigation/V2/index.html
@@ -207,7 +207,7 @@
   </nav>
   <!-- header -->
   <main>
-    <div class="Grey200Bg">
+    <div class="GreyBg200">
       <div class="blankPhone"></div>
       <div class="blankHS"></div>
       <div class="ProjectBanner displayLaptop">
@@ -501,7 +501,7 @@
                 <div class="Grid Grid--full wrapper">
                   <div class="Grid-cell">
                     <div class="">
-                      <div class="element Grey100Bg leftVerLine ">
+                      <div class="element GreyBg100 leftVerLine ">
                         <h4>
                           <p> <strong>Title </strong></p>
                           <ul>
@@ -639,7 +639,7 @@
       </section>
     </section>
 
-    <section id="c3" class="colorBgGrey">
+    <section id="c3" class="GreyBg200">
       <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
         <div class="Grid-cell">
           <h1 class="Grid Grid--center"> <span>Title</span><img class="moveUpDown widthLogo"
@@ -752,7 +752,7 @@
 
 
   <!--footer-->
-  <footer class="Grey100Bg">
+  <footer class="GreyBg100">
     <div class="element">
       <div class="footer">
         <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
