--- a/navigation/V3/index.html
+++ b/navigation/V3/index.html
@@ -210,7 +210,7 @@
   </nav>
   <!-- header -->
   <main>
-    <div class="Grey200Bg">
+    <div class="GreyBg200">
       <div class="blankPhone"></div>
       <div class="blankHS"></div>
       <div class="ProjectBanner displayLaptop">
@@ -567,7 +567,7 @@
 
 
   <!--footer-->
-  <footer class="Grey100Bg">
+  <footer class="GreyBg100">
     <div class="element">
       <div class="footer">
         <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
