--- a/architecture/index.html
+++ b/architecture/index.html
@@ -427,7 +427,7 @@
   </button>
   <!--back to top-->
   <!--footer-->
-  <footer class="Grey100Bg">
+  <footer class="GreyBg100">
     <div class="element">
       <div class="footer">
         <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
