--- a/architecture/recreation_commons/index.html
+++ b/architecture/recreation_commons/index.html
@@ -483,7 +483,7 @@
 
 <!--footer-->
 <!--footer-->
-<div class="Grey200Bg">
+<div class="GreyBg200">
 
   <div class="footer">
     <p class="footer-left"> &#169; 2023 &#8212; VICKY WANG
