--- a/navigation/index.html
+++ b/navigation/index.html
@@ -203,7 +203,7 @@
   </nav>
   <!-- header -->
   <main>
-    <div class="Grey200Bg">
+    <div class="GreyBg200">
       <div class="blankPhone"></div>
       <div class="blankHS"></div>
       <div class="ProjectBanner displayLaptop">
@@ -388,7 +388,7 @@
 
 
   <!--footer-->
-  <footer class="Grey100Bg">
+  <footer class="GreyBg100">
     <div class="element">
       <div class="footer">
         <h4 class="footer-left"> &#169; 2023 &#8212; VICKY WANG</h4>
