--- a/design_system/index.html
+++ b/design_system/index.html
@@ -515,7 +515,7 @@
             <div class="Grid Grid--gutters Grid--cols-4 u-textCenter">
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS SkylineBlue shadowBox">
+                  <div class="blockS BgSkylineBlue shadowBox">
                     <div>Beach 400</div>
                     <div>HEX:e6e6e6</div>
                   </div>
@@ -523,7 +523,7 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS SkylineBlueLt shadowBox">
+                  <div class="blockS BgSkylineBlueLt shadowBox">
                     <div>Beach 300</div>
                     <div>HEX:292929</div>
                   </div>
@@ -531,7 +531,7 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS SkylineBlueLter shadowBox">
+                  <div class="blockS BgSkylineBlueLter shadowBox">
                     <div>Beach 200</div>
                     <div>HEX:4f4f4f</div>
                   </div>
@@ -539,7 +539,7 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS SkylineBlueLtest shadowBox">
+                  <div class="blockS BgSkylineBlueLtest shadowBox">
                     <div>Beach 100</div>
                     <div>HEX:757575</div>
                   </div>
@@ -547,7 +547,7 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS colorWarm  shadowBox">
+                  <div class="blockS BgWarm shadowBox">
                     <div>Sandy</div>
                     <div>HEX:fcf5eb</div>
                   </div>
@@ -556,7 +556,7 @@
 
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="blockS colorAlet shadowBox">
+                  <div class="blockS BgAlet shadowBox">
                     <div>Alert</div>
                     <div>HEX:CC3300</div>
                   </div>
@@ -1456,7 +1456,7 @@
             </div>
             <div class="blankHXS"></div>
             <!-- LRcarousel-->
-            <div class="SkylineBlueLter">
+            <div class="BgSkylineBlueLter">
               <div class="blankHXS"></div>
               <!-- Slideshow Title -->
               <h2 class="element">Horizontal layout with background color </h2>
@@ -1538,7 +1538,7 @@
 
             <!-- TBcarousel with background-->
 
-            <div class="SkylineBlueLter">
+            <div class="BgSkylineBlueLter">
               <div class="blankHXS"></div>
               <!-- Slideshow Title -->
               <h2 class="element">Vertical layout with background color </h2>
