--- a/test/index.html
+++ b/test/index.html
@@ -344,7 +344,7 @@
       </div>
       <div class="blankHXS"></div>
       <!-- LRcarousel-->
-      <div class="SkylineBlueLter">
+      <div class="BgSkylineBlueLter">
         <div class="blankHXS"></div>
         <!-- Slideshow Title -->
         <h2 class="element">Horizontal layout with background color </h2>
@@ -426,7 +426,7 @@
 
       <!-- TBcarousel with background-->
 
-      <div class="SkylineBlueLter">
+      <div class="BgSkylineBlueLter">
         <div class="blankHXS"></div>
         <!-- Slideshow Title -->
         <h2 class="element">Vertical layout with background color </h2>
