--- a/design_system1/index.html
+++ b/design_system1/index.html
@@ -1174,7 +1174,6 @@
             <h3>HTML Code</h3>
             <pre>
               <code>
-
                     &lt;div class="Grid Grid--full u-textCenter"&gt;
                       &lt;div class="Grid-cell"&gt;&lt;div class="Demo content-1of1"&gt;&lt;/div&gt;&lt;/div&gt;
                     &lt;/div&gt;
@@ -1567,6 +1566,35 @@
               </div>
             </div>
           </div>
+          <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
+            <div class="Grid-cell">
+              <div class="element">
+                <a href="/about"> <button class="buttonLanding arrButton">Button &nbsp;
+                  </button></a>
+              </div>
+            </div>
+
+            <div class="Grid-cell">
+              <div class="element">
+              </div>
+            </div>
+          </div>
+
+
+
+          <div class="element">
+            <h3>HTML Code</h3>
+            <pre>
+              <code>
+                &lt;a&gt; &lt;button class="buttonLanding"&gt;Button
+                    &amp;nbsp; &lt;/button&gt;&lt;/a&gt;
+                &lt;a&gt; &lt;button class="button-35 DS"&gt;Button&lt;/button&gt;&lt;/a&gt;
+                &lt;a&gt; &lt;button class="buttonLanding arrButton"&gt;Button &amp;nbsp;
+                  &lt;/button&gt;&lt;/a&gt;
+                </code>
+                
+            </pre>
+          </div>
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
@@ -1580,9 +1608,7 @@
                 <a><img class="intro-logo" src="../icon/in.svg" alt="linkedIn" title="linkedIn"></a>
                 <a><img class="intro-logo" src="../icon/git.svg" alt="GitHub" title="GitHub"></a>
                 <a><img class="intro-logo" src="../icon/Codepen.svg" alt="CodePen" title="CodePen"></a>
-
                 <a> <img class="intro-logo" src="../icon/ins.svg" alt="Instagram" title="Instagram"></a>
-
               </div>
             </div>
             <div class="Grid-cell">
@@ -1595,13 +1621,54 @@
               </div>
             </div>
           </div>
+          <div class="element">
+            <h3>HTML Code</h3>
+            <pre>
+              <code>
+                &lt;!-- Large icons --&gt;
+                  &lt;a&gt;&lt;img class="intro-logo" src="../icon/in.svg" alt="linkedIn" title="linkedIn"&gt;&lt;/a&gt;
+                  &lt;a&gt;&lt;img class="intro-logo" src="../icon/git.svg" alt="GitHub" title="GitHub"&gt;&lt;/a&gt;
+                  &lt;a&gt;&lt;img class="intro-logo" src="../icon/Codepen.svg" alt="CodePen" title="CodePen"&gt;&lt;/a&gt;
+                  &lt;a&gt; &lt;img class="intro-logo" src="../icon/ins.svg" alt="Instagram" title="Instagram"&gt;&lt;/a&gt;
+                &lt;!-- Large icons --&gt;
+                
+                &lt;!-- Small icons --&gt;
+                  &lt;a&gt; &lt;img class="footer-logo" src="../icon/in.svg" alt="linkedIn" title="linkedIn"&gt;&lt;/a&gt;
+                  &lt;a&gt; &lt;img class="footer-logo" src="../icon/git.svg" alt="GitHub" title="GitHub"&gt;&lt;/a&gt;
+                  &lt;a&gt;&lt;img class="footer-logo" src="../icon/Codepen.svg" alt="CodePen" title="CodePen"&gt;&lt;/a&gt;
+                  &lt;a&gt; &lt;img class="footer-logo" src="../icon/ins.svg" alt="Instagram" title="Instagram"&gt;&lt;/a&gt;
+                &lt;!-- Small icons --&gt;
+              </code>
+            </pre>
+          </div>
           <div class="Grid Grid--full">
             <div class="Grid-cell">
               <div class="element">
-                <h1> <strong class="SkylineBlueLt">inputs</strong> </h1>
+                <h1> <strong class="SkylineBlueLt">Inputs</strong> </h1>
               </div>
             </div>
           </div>
+          <div class="blankHXS"></div>
+
+
+          <div class="img__wrap widthS heightS element">
+            <div class="img__descriptionDesignSystem">
+              <div class="input-field">
+                <label for="password">Password</label>
+                <input type="password" id="password" placeholder="Enter password">
+                <button class="passwordArr" type="submit">
+                  <img src="../icon/arrow-forward.svg" alt="Enter">
+                  <!--  <i class="fas fa-chevron-right"></i> -->
+                </button>
+                <div class="pwIncorrectHeight">
+                  <span id="pwIncorrect">Password is incorrect </span>
+                </div>
+              </div>
+            </div>
+
+          </div>
+
+
         </div>
       </section>
       <section id="content32">
@@ -1672,7 +1739,7 @@
           </div>
           <div class="blankHXS"></div>
           <div class="element">
-            <h3 class="accordion accordionBorderTop noMargin withBg"><strong>Clean</strong> </h3>
+            <h3 class="accordion accordionBorderTop noMargin"><strong>Clean</strong> </h3>
             <div class="accordion-content">
               <div class="Grid Grid--full">
                 <div class="Grid-cell">
@@ -1718,7 +1785,7 @@
               </div>
               <div class="blankHXS"></div>
             </div>
-            <h3 class="accordion noMargin withBg"><strong>Border</strong> </h3>
+            <h3 class="accordion noMargin"><strong>Border</strong> </h3>
             <div class="accordion-content">
               <div class="Grid Grid--gutters Grid--cols-2">
                 <div class="Grid-cell">
@@ -1758,7 +1825,7 @@
               </div>
               <div class="blankHXS"></div>
             </div>
-            <h3 class="accordion accordionBorderBottom noMargin withBg"><strong>Gradient</strong> </h3>
+            <h3 class="accordion accordionBorderBottom noMargin"><strong>Gradient</strong> </h3>
             <div class="accordion-content">
               <div class="blankHXS"></div>
               <div class="Grid Grid--gutters Grid--cols-3">
